--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: transparent;
+  font-size: 20px;
 }
 
 @keyframes slideIn {
@@ -22,7 +23,7 @@ nav {
   top: 0;
   text-align: center;
   z-index: 100;
-  padding: 15px;
+  padding: 15px 0;
   animation: slideIn 0.5s ease-in-out;
 }
 .profile-image {
@@ -32,16 +33,13 @@ nav {
 }
 
 .content {
-  max-width: 800px;
+  max-width: 1024px;
   margin: 0 auto;
+  background-color: white;
 }
 
 .bold {
   font-weight: bold;
-}
-
-p {
-  font-size: 1.2rem;
 }
 
 h2.header-title {
@@ -69,12 +67,21 @@ nav ul li {
   display: inline-block;
   margin: 0 1rem;
 }
-.nav-bg {
+
+#nav-bg {
   position: sticky;
-  background: #ddf2fd;
+  z-index: 1000;
   top: 0;
   left: 0;
   height: 50px;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+#nav-bg.nav-bg-colored {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .content {
@@ -90,6 +97,22 @@ nav a:visited {
   font-weight: bold;
   text-transform: uppercase;
   transition: color 0.5s ease-in-out;
+}
+
+nav a::after {
+  content: "";
+  display: block;
+  width: 5px;
+  opacity: 0;
+  margin: auto;
+  height: 2px;
+  background: white;
+  transition: all 0.5s ease-in-out;
+}
+nav a:hover::after {
+  width: 100%;
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
 }
 @keyframes color-change {
   0% {
@@ -109,6 +132,7 @@ nav.inverted a:visited {
 .wrapper {
   height: 100vh;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
   perspective: 10px;
   scroll-snap-type: y mandatory;
@@ -214,6 +238,11 @@ main {
   z-index: 100;
 }
 
+footer {
+  text-align: center;
+  padding: 2rem;
+}
+
 .scroll-indicator {
   position: absolute;
   display: flex;
@@ -285,6 +314,10 @@ main {
 }
 
 /* Technology section */
+#technologies {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 div.spacer {
   height: 50px;
 }
@@ -300,7 +333,65 @@ div.spacer {
   padding: 0 1rem;
 }
 .technology-asset {
-  flex-basis: 250px;
-  width: 150px;
-  background: black;
+  background-position: center;
+  flex-basis: 400px;
+  background-size: cover;
+}
+
+/* Mobile */
+@media screen and (max-width: 1024px) {
+  .profile-image {
+    width: 100%;
+  }
+  .language-container img {
+    scale: 1.5;
+  }
+  .language-container {
+    justify-content: space-around;
+  }
+  .technology-container {
+    flex-direction: column;
+  }
+  .technology-asset {
+    flex: 1;
+    aspect-ratio: 1 / 1;
+  }
+  #content {
+    padding: 0;
+  }
+  .technology-container.reverse {
+    flex-direction: column;
+  }
+  .content p {
+    padding: 3rem;
+  }
+  p {
+    font-size: 3rem;
+  }
+  .technology-container p {
+    font-size: 3rem;
+  }
+  .technology-text {
+    padding: 0;
+  }
+  h2.header-title {
+    font-size: 100px;
+    font-weight: 600;
+  }
+  h3.technology-title {
+    font-size: 80px;
+    font-weight: 600;
+  }
+  .bg-image-front {
+    bottom: -240px;
+  }
+  nav a {
+    font-size: 2rem !important;
+  }
+  nav {
+    padding: 4rem 0;
+  }
+  #nav-bg {
+    height: 160px;
+  }
 }
