--- a/assets/styles.css
+++ b/assets/styles.css
@@ -540,8 +540,36 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.sticky {
+  position: sticky;
+}
+
 .-bottom-60 {
   bottom: -15rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .float-left {
@@ -558,8 +586,16 @@ video {
   margin-bottom: 0px;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mr-8 {
@@ -570,12 +606,24 @@ video {
   margin-top: 1rem;
 }
 
+.block {
+  display: block;
+}
+
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
 
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .h-36 {
@@ -588,6 +636,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-52 {
+  width: 13rem;
 }
 
 .w-full {
@@ -616,8 +668,16 @@ video {
   flex-direction: column;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .justify-center {
   justify-content: center;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .bg-white {
@@ -642,22 +702,9 @@ video {
   padding: 2.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 
 .px-8 {
@@ -665,19 +712,41 @@ video {
   padding-right: 2rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-3xl {
@@ -690,8 +759,37 @@ video {
   line-height: 1;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.text-\[\#164863\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 72 99 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .blur {
@@ -720,27 +818,12 @@ body {
 }
 
 nav {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  text-align: center;
-  z-index: 100;
-  padding: 15px 0;
   animation: slideIn 0.5s ease-in-out;
 }
 
 h2.header-title {
   padding-bottom: 2rem;
   font-size: 3.5rem;
-  font-weight: 400;
-  margin-bottom: 0.5rem;
-  text-align: center;
-}
-
-h3.technology-title {
-  padding-bottom: 2rem;
-  font-size: 2.5rem;
   font-weight: 400;
   margin-bottom: 0.5rem;
   text-align: center;
@@ -759,19 +842,27 @@ nav ul li {
   margin: 0 1rem;
 }
 
-#nav-bg {
-  position: sticky;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  height: 50px;
-  opacity: 0;
-  background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+/* #nav-bg { */
 
-#nav-bg.nav-bg-colored {
-  opacity: 1;
+/*   position: sticky; */
+
+/*   z-index: 1000; */
+
+/*   top: 0; */
+
+/*   left: 0; */
+
+/*   height: 50px; */
+
+/*   opacity: 0; */
+
+/*   background: #fff; */
+
+/*   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+
+/* } */
+
+#nav-bg.opacity-100 {
   transition: opacity 0.5s ease-in-out;
 }
 
@@ -780,7 +871,6 @@ nav a:link,
 nav a:visited {
   color: #fff;
   text-decoration: none;
-  font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   transition: color 0.5s ease-in-out;
@@ -824,14 +914,19 @@ nav.inverted a:visited {
   transition: color 1s ease-in-out;
 }
 
-.social-media {
-  text-align: center;
-  padding: 1rem 0;
-}
-
 p {
   margin-bottom: 1rem;
 }
+
+/* .social-media { */
+
+/*   text-align: center; */
+
+/*   padding: 1rem 0; */
+
+/* } */
+
+/**/
 
 /* .social-media a, */
 
@@ -1053,24 +1148,32 @@ main {
     bottom: -8rem;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:inline {
+    display: inline;
+  }
+
+  .lg\:h-12 {
+    height: 3rem;
+  }
+
+  .lg\:w-12 {
+    width: 3rem;
+  }
+
   .lg\:w-72 {
     width: 18rem;
   }
 
-  .lg\:flex-grow-0 {
-    flex-grow: 0;
-  }
-
-  .lg\:flex-grow-\[unset\] {
-    flex-grow: unset;
-  }
-
   .lg\:grow-0 {
     flex-grow: 0;
-  }
-
-  .lg\:grow-\[unset\] {
-    flex-grow: unset;
   }
 
   .lg\:basis-\[400px\] {
@@ -1095,10 +1198,6 @@ main {
     padding: 1.25rem;
   }
 
-  .lg\:p-4 {
-    padding: 1rem;
-  }
-
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1109,8 +1208,27 @@ main {
     padding-right: 1rem;
   }
 
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:pt-\[10px\] {
+    padding-top: 10px;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .lg\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
