--- a/assets/styles.css
+++ b/assets/styles.css
@@ -764,13 +764,16 @@ video {
   line-height: 1;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-normal {
+  line-height: 1.5;
 }
 
 .text-\[\#164863\] {
@@ -802,7 +805,26 @@ video {
   margin: 0;
 }
 
+@font-face {
+  font-family: "NotoSans";
+
+  font-style: normal;
+
+  src: url("static/NotoSerif-Regular.ttf");
+}
+
+@font-face {
+  font-family: "NotoSans";
+
+  font-style: normal;
+
+  font-weight: 700;
+
+  src: url("static/NotoSerif-Bold.ttf");
+}
+
 body {
+  font-family: NotoSans;
   background-color: transparent;
   font-size: 20px;
 }
