--- a/input.css
+++ b/input.css
@@ -6,7 +6,20 @@
   margin: 0;
 }
 
+@font-face {
+  font-family: "NotoSans";
+  font-style: normal;
+  src: url("static/NotoSerif-Regular.ttf");
+}
+@font-face {
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("static/NotoSerif-Bold.ttf");
+}
+
 body {
+  font-family: NotoSans;
   background-color: transparent;
   font-size: 20px;
 }
