--- a/assets/styles.css
+++ b/assets/styles.css
@@ -548,10 +548,6 @@ video {
   position: sticky;
 }
 
-.bottom-56 {
-  bottom: 14rem;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -590,6 +586,10 @@ video {
   margin-bottom: 0px;
 }
 
+.-mt-8 {
+  margin-top: -2rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -610,14 +610,6 @@ video {
   margin-top: 1rem;
 }
 
-.-mt-16 {
-  margin-top: -4rem;
-}
-
-.-mt-8 {
-  margin-top: -2rem;
-}
-
 .block {
   display: block;
 }
@@ -634,16 +626,32 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.h-3\/4 {
-  height: 75%;
-}
-
 .h-32 {
   height: 8rem;
 }
 
 .h-36 {
   height: 9rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .w-12 {
@@ -680,12 +688,28 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-75 {
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .flex-row {
   flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -700,14 +724,14 @@ video {
   border-radius: 0.75rem;
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -725,6 +749,14 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-4 {
@@ -762,13 +794,16 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pt-12 {
   padding-top: 3rem;
+}
+
+.pt-\[10px\] {
+  padding-top: 10px;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-center {
@@ -798,8 +833,9 @@ video {
   line-height: 1;
 }
 
-.text-\[9rem\] {
-  font-size: 9rem;
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .text-\[1\.5rem\] {
@@ -808,6 +844,34 @@ video {
 
 .text-\[2rem\] {
   font-size: 2rem;
+}
+
+.text-\[9rem\] {
+  font-size: 9rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-\[7rem\] {
+  font-size: 7rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -912,7 +976,7 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 /* #nav-bg { */
@@ -1049,13 +1113,13 @@ header {
   justify-content: center;
   align-items: center;
   height: 100%;
-  transform-style: preserve-3d;
+  /* transform-style: preserve-3d; */
   z-index: 0;
 }
 
 .title-text {
   position: absolute;
-  transform: translateZ(5px);
+  /* transform: translateZ(5px); */
 }
 
 header h1 {
@@ -1132,20 +1196,23 @@ header h1 {
 }
 
 .blur {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(transparent, rgba(255, 255, 255, 0.4));
-  transform: translateZ(-9px) scale(2);
+  /* transform: translateZ(-9px) scale(2); */
 }
 
 #particles {
   width: 100%;
   height: 100%;
   background-color: #164863;
-  transform: translateZ(-10px) scale(2);
+  /* transform: scale(2); */
+  /* transform: translateZ(-10px) scale(2); */
+  z-index: -1000;
 }
 
 .bg-image-front {
@@ -1158,7 +1225,7 @@ header h1 {
   color: #fff;
   -o-object-fit: cover;
      object-fit: cover;
-  transform: translateZ(-5px) scale(1.5);
+  /* transform: translateZ(-5px) scale(1.5); */
 }
 
 main {
@@ -1228,17 +1295,20 @@ main {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
 @media (min-width: 1024px) {
-  .lg\:bottom-16 {
-    bottom: 4rem;
+  .lg\:-mt-16 {
+    margin-top: -4rem;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .lg\:-mt-16 {
-    margin-top: -4rem;
   }
 
   .lg\:block {
@@ -1261,12 +1331,12 @@ main {
     width: 3rem;
   }
 
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .lg\:w-72 {
     width: 18rem;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:grow-0 {
@@ -1314,6 +1384,11 @@ main {
     padding-top: 10px;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1321,6 +1396,14 @@ main {
 
   .lg\:text-\[15rem\] {
     font-size: 15rem;
+  }
+
+  .lg\:text-\[2rem\] {
+    font-size: 2rem;
+  }
+
+  .lg\:text-\[3rem\] {
+    font-size: 3rem;
   }
 
   .lg\:text-base {
@@ -1331,17 +1414,5 @@ main {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-\[4rem\] {
-    font-size: 4rem;
-  }
-
-  .lg\:text-\[3rem\] {
-    font-size: 3rem;
-  }
-
-  .lg\:text-\[2rem\] {
-    font-size: 2rem;
   }
 }
