--- a/input.css
+++ b/input.css
@@ -54,7 +54,7 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 /* #nav-bg { */
@@ -157,13 +157,13 @@ header {
   justify-content: center;
   align-items: center;
   height: 100%;
-  transform-style: preserve-3d;
+  /* transform-style: preserve-3d; */
   z-index: 0;
 }
 
 .title-text {
   position: absolute;
-  transform: translateZ(5px);
+  /* transform: translateZ(5px); */
 }
 
 header h1 {
@@ -215,20 +215,23 @@ header h1 {
   transform: translateZ(-10px) scale(2);
 }
 .blur {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(transparent, rgba(255, 255, 255, 0.4));
-  transform: translateZ(-9px) scale(2);
+  /* transform: translateZ(-9px) scale(2); */
 }
 
 #particles {
   width: 100%;
   height: 100%;
   background-color: #164863;
-  transform: translateZ(-10px) scale(2);
+  /* transform: scale(2); */
+  /* transform: translateZ(-10px) scale(2); */
+  z-index: -1000;
 }
 
 .bg-image-front {
@@ -240,7 +243,7 @@ header h1 {
   /* filter: invert(0%) saturate(0) contrast(100%) brightness(0); */
   color: #fff;
   object-fit: cover;
-  transform: translateZ(-5px) scale(1.5);
+  /* transform: translateZ(-5px) scale(1.5); */
 }
 
 main {
